# forest-change-monitor

./: .gitignore  README.md  app.py  diag.py  find_hotspots.py  pyproject.toml  requirements.txt  validate.py
.github/workflows/: lint.yml  tests.yml
.streamlit/: config.toml
config/: demo_site.yaml
data/: README.md
data/aoi/: demo_site.geojson
docs/: limitations.md  methodology.md  qa.md
outputs/: yearly_loss_summary.csv  yearly_loss_summary.json
scripts/: run_pipeline.py
src/forest_change/: __init__.py  change.py  cli.py  config.py  gee.py  geometry.py  metrics.py  process_loss.py  raster.py  report.py  visualize.py
tests/: test_geometry.py  test_process_loss.py  test_smoke.py
