[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forest-change-monitor"
version = "0.1.0"
description = "Educational satellite-based forest/vegetation change-monitoring prototype (NDVI proxy) - a portfolio project."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]
dependencies = [
    "earthengine-api>=1.0",
    "geopandas>=0.14",
    "rasterio>=1.3",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
forest-change = "forest_change.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
